<?xml version="1.0"?>
<package>
  
  <name>puthand_gazebo</name>
  <version>0.2.0</version>
  <description>PUT Driver wrapper to enable control of the PUT hand</description>
  
  <maintainer email="dominik.belter@put.poznan.pl">Dominik Belter</maintainer>

  <license>LGPL</license>

  <author email="dominik.belter@put.poznan.pl">Dominik Belter</author>
   <url>http://www.lrm.put.poznan.pl</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  
  <export>
 	<rqt_gui plugin="${prefix}/plugin.xml" />
        <rosdoc config="etc/rosdoc.yaml" />
  </export>
  
</package>
